--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -95,11 +95,19 @@
     "Lottery:LotteryRed": "红球",
     "Lottery:LotteryCode": "开奖日期",
 
-    "Permission:QueueLogTelegaram": "队列日志",
-    "Permission:QueueLog": "日志",
 
-    "Lottery:QueueLogTitle": "日志",
-    "Menu:QueueLog": "日志"
+    "Menu:LogSink": "日志",
+    "Menu:SignalRSink": "实时日志",
+    "Menu:QueueSink": "缓存日志",
+    "Permission:LogSinkTelegaram": "日志",
+    "Permission:SignalRSink": "实时日志",
+    "Permission:QueueSink": "缓存日志",
+    "Lottery:SignalRTitle": "实时日志",
+    "Lottery:QueueSinkTitle": "缓存日志"
+
+
+
+
 
 
   }
