--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -110,6 +110,7 @@
     "Menu:Bookkeeping": "记账",
     "Menu:BookkeepingCategory": "类型",
     "Menu:BookkeepingExpenditure": "开支",
+    "Menu:BookkeepingExpenditure:Analysis": "分析",
     "Permisssion:Bookkeeping": "记账权限",
     "Permisssion:BookkeepingCategory": "类型权限",
     "Permisssion:BookkeepingCategory:Create": "创建",
@@ -119,6 +120,7 @@
     "Permisssion:BookkeepingExpenditure:Create": "创建",
     "Permisssion:BookkeepingExpenditure:Delete": "删除",
     "Permisssion:BookkeepingExpenditure:Modify": "修改",
+    "Permisssion:BookkeepingExpenditure:Analysis": "分析",
     "BookkeepingCategory:Title": "类型",
     "BookkeepingCategory:Modal:Create:Title": "新增类型",
     "BookkeepingCategory:Modal:Update:Title": "更新类型",
@@ -131,6 +133,7 @@
     "BookkeepingExpenditure:Column:ExpenditureDate": "时间",
     "BookkeepingExpenditure:Column:Expenditure": "金额",
     "BookkeepingExpenditure:Column:Category": "类型",
+    "BookkeepingExpenditure:Analysis:Title": "分析",
 
     "Menu:FileUploadDownload": "文件传输",
     "Menu:FileUploadDownload:Upload": "上传文件",
