--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -75,6 +75,7 @@
     "LotteryIndexNo": "期号",
     "LotteryNumber": "号码",
     "LotteryColorType": "类型",
+    "LotteryType": "彩票类型",
     "LotteryGroupId": "同期组号",
     "LotteryCreationTime": "创建时间",
     "LotteryLastModificationTime": "最后修改时间",
