添加配置表

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -146,10 +146,21 @@
     "Permission:FileUploadDownload": "文件传输",
     "Permission:FileUploadDownload:Upload": "上传文件",
     "Permission:FileUploadDownload:Download": "下载文件",
-    "FileUploadDownload:Upload:Title": "上传文件"
+    "FileUploadDownload:Upload:Title": "上传文件",
 
 
-
+    "Menu:ConfigurationInfo": "配置",
+    "Permisssion:ConfigurationInfo": "配置权限",
+    "Permisssion:ConfigurationInfo:Create": "创建",
+    "Permisssion:ConfigurationInfo:Delete": "删除",
+    "Permisssion:ConfigurationInfo:Modify": "修改",
+    "ConfigurationInfo:Title": "配置",
+    "ConfigurationInfo:Modal:Create:Title": "新增配置",
+    "ConfigurationInfo:Modal:Update:Title": "更新配置",
+    "ConfigurationInfo:Column:Id": "ID",
+    "ConfigurationInfo:Column:MoudleName": "模块名称",
+    "ConfigurationInfo:Column:ConfigurationName": "配置名称",
+    "ConfigurationInfo:Column:ConfigurationValue": "配置值"
 
 
 
