--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -8,6 +8,7 @@
     "Menu:Media": "媒体",
     "Menu:Media:ExternalLink": "外部下载",
     "Menu:Media:Chart": "图表",
+    "Menu:Media:Login": "登录",
     "Menu:DynamicIP": "地址记录表",
 
     "Actions": "操作",
