--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -3,19 +3,18 @@
   "texts": {
     "Welcome": "欢迎",
     "LongWelcomeMessage": "欢迎来到该应用程序. 这是一个基于ABP框架的启动项目. 有关更多信息, 请访问 abp.io.",
-
-    "Menu:Home": "首页",
-    "Menu:Media": "媒体",
-    "Menu:Media:ExternalLink": "外部下载",
-    "Menu:Media:Chart": "图表",
-    "Menu:Media:Login": "登录",
-    "Menu:DynamicIP": "地址记录表",
-
     "Actions": "操作",
     "Close": "关闭",
     "Delete": "删除",
     "Edit": "编辑",
 
+    "Menu:Home": "首页",
+
+
+
+    "Menu:TG:Media": "媒体",
+    "Menu:TG:Media:Chart": "图表",
+    "Menu:TG:Media:Login": "登录",
     "Button:Download": "下载文件",
     "Permission:MediaTelegaram": "媒体管理",
     "Permission:Medias": "媒体",
@@ -42,31 +41,13 @@
     "MediaLastModificationTime": "修改时间",
     "MediaLastModifierId": "修改人编号",
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    "Menu:TG:Media:ExternalLink": "外部下载",
     "TG:Media:ExternalLink:Title": "媒体外部下载",
-    "TG:Media:ExternalLink:Button:Title": "媒体外部下载",
     "TG:Media:ExternalLink:Button:Remove": "移除文件",
     "TG:Media:ExternalLink:Button:Link": "查看连接",
     "TG:Media:ExternalLink:Button:Copy": "复制",
     "TG:Media:ExternalLink:Button:Delete": "删除",
     "TG:Media:ExternalLink:Button:New": "获取外链",
-    "Media:ExternalLinkTitle:GetLink": "获取连接",
-    "Media:ExternalLinkTitle:Copy": "复制",
-    "Media:ExternalLinkTitle:Move": "移除",
     "TG:Media:ExternalLink:CopySuccessMesage": "复制成功！",
     "TG:Media:ExternalLink:DeletionConfirmationMessage": "您确定要删除吗 '{0}'?",
     "TG:Media:ExternalLink:RemoveConfirmationMessage": "您确定要移除文件吗 '{0}'?",
@@ -82,28 +63,10 @@
     "TG:Media:ExternalLink:Column:lastModificationTime": "修改时间",
 
 
+    "TG:Media:Chart:Title": "媒体图表",
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    "Media:ChartTitle": "媒体图表",
-
-
+    "Menu:DynamicIP": "地址记录表",
     "DynamicIPIPAddress": "IP地址",
     "DynamicIPIP": "IP",
     "DynamicIPPort": "端口号",
@@ -163,8 +126,8 @@
     "Permission:LogSinkTelegaram": "日志",
     "Permission:SignalRSink": "实时日志",
     "Permission:QueueSink": "缓存日志",
-    "Lottery:SignalRTitle": "实时日志",
-    "Lottery:QueueSinkTitle": "缓存日志",
+    "LogSink:SignalRSink:Title": "实时日志",
+    "LogSink:QueueSink:Title": "缓存日志",
 
 
 
@@ -224,9 +187,26 @@
     "ConfigurationInfo:Column:MoudleName": "模块名称",
     "ConfigurationInfo:Column:ConfigurationName": "配置名称",
     "ConfigurationInfo:Column:ConfigurationValue": "配置值",
-    "ConfigurationInfo:Column:Remark": "备注"
+    "ConfigurationInfo:Column:Remark": "备注",
 
-
-
+    "Menu:ManagementBackground": "后台任务管理",
+    "Permisssion:ManagementBackground": "后台任务",
+    "Permisssion:ManagementBackground:Restart": "重启",
+    "Permisssion:ManagementBackground:Stop": "停止",
+    "ManagementBackground:Title": "后台任务",
+    "Management:Background:Button:Stop": "停止",
+    "Management:Background:Button:Restart": "重启",
+    "Management:Background:Column:RunStatus": "状态",
+    "Management:Background:Column:ModuleName": "名称",
+    "Management:Background:Column:StartTime": "开始时间",
+    "Management:Background:Column:RestartTime": "重启时间",
+    "Management:Background:Column:RestartCount": "重启计数",
+    "Management:Background:Column:HasError": "是否错误",
+    "Management:Background:Column:ErrorCount": "错误计数",
+    "Management:Background:Column:ErrorDescription": "错误信息",
+    "Management:Background:Msg:Stop": "是否停止服务",
+    "Management:Background:Msg:Restart": "是否重启服务",
+    "Management:Background:Msg:StopSuccess": "停止服务成功",
+    "Management:Background:Msg:RestartSuccess": "重启服务成功"
   }
 }
