添加区分使用人

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -156,6 +156,7 @@
     "BookkeepingExpenditure:Column:Expenditure": "金额",
     "BookkeepingExpenditure:Column:Category": "类型",
     "BookkeepingExpenditure:Column:Remark": "备注",
+    "BookkeepingExpenditure:Column:IsBelongToSelf": "自用",
     "BookkeepingExpenditure:Analysis:Title": "分析",
 
     "Menu:FileUploadDownload": "文件传输",
