添加全部删除功能

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -219,6 +219,7 @@
     "Aria2:Button:Delete": "删除",
     "Aria2:Button:Remove": "删除文件",
     "Aria2:Button:Copy": "复制",
+    "Aria2:Button:DeleteAll": "删除全部",
     "Aria2:Column:ID": "ID",
     "Aria2:Column:GID": "GID",
     "Aria2:Column:Status": "状态",
