更新记账支出页面和本地化文件
- 添加“添加”按钮本地化文本
- 调整表格列数和总计显示
- 移除不必要的ID列
- 更新JavaScript以匹配新列结构
- 修复总计计算错误

Generated by DeepSeek

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -158,6 +158,7 @@
     "BookkeepingExpenditure:Column:Remark": "备注",
     "BookkeepingExpenditure:Column:IsBelongToSelf": "自用",
     "BookkeepingExpenditure:Analysis:Title": "分析",
+    "BookkeepingExpenditure:Button:Add": "添加",
 
     "Menu:FileUploadDownload": "文件传输",
     "Menu:FileUploadDownload:Upload": "上传文件",
