更新媒体管理页面的本地化和列顺序
- 更新中文本地化文件
- 调整媒体管理页面的列顺序
- 修改列标题以匹配本地化
- 添加新的列标题
- 更新列的排序顺序

Generated by DeepSeek

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -25,21 +25,22 @@
     "MediaDeletionConfirmationMessage": "您确定要删除吗 '{0}'?",
     "MediaTitle": "媒体管理",
     "SuccessfullyDeleted": "删除成功！",
-    "MediaId": "数据库自增编号",
-    "IsExternalLinkGenerated": "是否生成连接",
+    "Media:Column:ChatId": "Chat 编号",
+    "Media:Column:ChatTitle": "Chat 标题",
+    "Media:Column:IsExternalLinkGenerated": "是否生成连接",
     "IsFileDeleted": "是否删除文件",
     "MediaAccessHash": "Telegram Access Hash",
     "MediaTId": "Telegram编号",
-    "MediaSize": "大小",
-    "MediaMimeType": "文件类型",
+    "Media:Column:MediaSize": "大小",
+    "Media:Column:MediaMimeType": "文件类型",
     "MediaChatTitle": "标题",
     "MediaTaskComplete": "任务完成时间",
-    "MediaSavePath": "保存路径",
-    "MediaValueSHA1": "本地计算的SHA1值",
-    "MediaCreationTime": "创建时间",
-    "MediaCreatorId": "创建人编号",
-    "MediaLastModificationTime": "修改时间",
-    "MediaLastModifierId": "修改人编号",
+    "Media:Column:MediaSavePath": "保存路径",
+    "Media:Column:MD5": "MD5",
+    "Media:Column:MediaCreationTime": "创建时间",
+    "Media:Column:MediaLastModificationTime": "修改时间",
+    "Media:Column:Message":"消息",
+  
 
     "Menu:TG:Media:ExternalLink": "外部下载",
     "TG:Media:ExternalLink:Title": "媒体外部下载",
