重构媒体信息模型并优化外部链接服务
- 添加MediaId字段并移除IsFileDeleted字段
- 优化外部链接生成逻辑，支持多文件压缩
- 更新数据库迁移文件以反映模型变化
- 更新前端页面以显示新的媒体信息列
- 修复调试模式下的返回逻辑

Generated by DeepSeek

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -28,9 +28,7 @@
     "Media:Column:ChatId": "Chat 编号",
     "Media:Column:ChatTitle": "Chat 标题",
     "Media:Column:IsExternalLinkGenerated": "是否生成连接",
-    "IsFileDeleted": "是否删除文件",
-    "MediaAccessHash": "Telegram Access Hash",
-    "MediaTId": "Telegram编号",
+    "Media:Column:MediaId": "媒体编号",
     "Media:Column:MediaSize": "大小",
     "Media:Column:MediaMimeType": "文件类型",
     "MediaChatTitle": "标题",
