重构Aria2服务和Bookkeeping支出服务，引入通用DTO
- 重命名并移动FilterAndPagedAndSortedResultRequestDto
- 更新IAria2Service和Aria2Service以使用新DTO
- 更新BookkeepingExpenditureService以使用新DTO
- 更新MediaInfoService以使用新DTO
- 更新本地化文件以支持新列

Generated by DeepSeek

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -227,6 +227,7 @@
     "Aria2:Column:GID": "GID",
     "Aria2:Column:Status": "状态",
     "Aria2:Column:TotalLength": "大小",
+    "Aria2:Column:Files": "文件",
     "Aria2:Column:CreationTime": "创建时间",
     "Aria2:DeletionConfirmationMessage": "您确定要删除吗 '{0}'?",
     "Aria2:RemoveConfirmationMessage": "您确定要移除文件吗 '{0}'?",
