更新媒体管理界面和本地化字符串

--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -29,14 +29,14 @@
     "SuccessfullyDeleted": "删除成功！",
     "Media:Column:ChatId": "Chat 编号",
     "Media:Column:ChatTitle": "Chat 标题",
-    "Media:Column:IsExternalLinkGenerated": "是否生成连接",
+    "Media:Column:IsExternalLinkGenerated": "生成连接",
     "Media:Column:MediaId": "媒体编号",
     "Media:Column:MediaSize": "大小",
     "Media:Column:MediaMimeType": "文件类型",
     "MediaChatTitle": "标题",
     "MediaTaskComplete": "任务完成时间",
     "Media:Column:MediaSavePath": "保存路径",
-    "Media:Column:MD5": "MD5",
+    "Media:Column:IsDownloadCompleted": "任务完成",
     "Media:Column:Message":"消息",
     "Media:Button:DeleteInvalidItemsButton":"删除无效项",
     "Media:Message:InvalidItemsDeletedSuccessfully": "无效项删除成功",
