新增删除指定期号数据功能，更新相关服务和前端页面

--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -23,6 +23,8 @@
     "Menu:LotterySimulationStatistics": "Simulation Statistics",
     "LotterySimulation:Statistics": "Simulation Statistics",
     "LotterySimulation:PurchaseAmount": "Purchase Amount",
-    "LotterySimulation:WinningAmount": "Winning Amount"
+    "LotterySimulation:WinningAmount": "Winning Amount",
+    "LotterySimulation:DeleteByTermNumber": "Delete Term Number Data",
+    "LotterySimulation:Button:DeleteByTermNumber": "Delete Term"
   }
 }
