更新彩票模拟功能，重构 DTO，新增红球和蓝球属性，优化数据查询和本地化文本

--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -25,6 +25,10 @@
     "LotterySimulation:PurchaseAmount": "Purchase Amount",
     "LotterySimulation:WinningAmount": "Winning Amount",
     "LotterySimulation:DeleteByTermNumber": "Delete Term Number Data",
-    "LotterySimulation:Button:DeleteByTermNumber": "Delete Term"
+    "LotterySimulation:Button:DeleteByTermNumber": "Delete Term",
+    "LotterySimulation:RedNumbers": "Red Numbers",
+    "LotterySimulation:BlueNumber": "Blue Number", 
+    "LotterySimulation:CalculateWinning": "Calculate Winning",
+    "LotterySimulation:CalculateWinning:Title": "Calculate Winning"
   }
 }
