新增月均支出计算功能，更新相关数据模型和前端图表展示

--- a/src/DFApp.Domain.Shared/Localization/Bookkeeping/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/Bookkeeping/zh-Hans.json
@@ -35,6 +35,9 @@
     "BookkeepingExpenditure:Chart:TotalExpenditure": "总支出",
     "BookkeepingExpenditure:Chart:SelfExpenditure": "自用支出",
     "BookkeepingExpenditure:Chart:NonSelfExpenditure": "非自用支出",
+    "BookkeepingExpenditure:Chart:TotalAverage": "总支出月均",
+    "BookkeepingExpenditure:Chart:SelfAverage": "自用支出月均",
+    "BookkeepingExpenditure:Chart:NonSelfAverage": "非自用支出月均",
     "BookkeepingExpenditure:Button:Add": "添加",
     "Common:Year": "年"
   }
