新增K8彩票模拟菜单本地化字符串

--- a/src/DFApp.Domain.Shared/Localization/LotterySimulation/en.json
+++ b/src/DFApp.Domain.Shared/Localization/LotterySimulation/en.json
@@ -38,6 +38,7 @@
     "LotteryK8:Generate:Title": "Generate K8 Numbers",
     "LotteryK8:Statistics": "K8 Statistics",
     "LotteryK8:PurchaseAmount": "Purchase Amount",
-    "LotteryK8:WinningAmount": "Winning Amount"
+    "LotteryK8:WinningAmount": "Winning Amount",
+    "Menu:LotteryK8": "K8 Lottery"
   }
 }
