--- a/src/DFApp.Domain.Shared/Localization/LotterySimulation/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/LotterySimulation/zh-Hans.json
@@ -38,6 +38,7 @@
     "LotteryK8:Generate:Title": "生成快乐8号码",
     "LotteryK8:Statistics": "快乐8统计",
     "LotteryK8:PurchaseAmount": "购买金额",
-    "LotteryK8:WinningAmount": "中奖金额"
+    "LotteryK8:WinningAmount": "中奖金额",
+    "Menu:LotteryK8": "快乐8"
   }
 }
