feat: 添加快乐8玩法类型的本地化显示
- 添加快乐8玩法类型（选一至选十）的本地化文本
- 修改统计图表中玩法类型标签的显示方式
- 为快乐8玩法类型（Select One至Select Ten）添加英文翻译

--- a/src/DFApp.Domain.Shared/Localization/LotterySimulation/en.json
+++ b/src/DFApp.Domain.Shared/Localization/LotterySimulation/en.json
@@ -42,6 +42,16 @@
     "Menu:LotteryK8": "K8 Lottery",
     "LotteryK8:DeleteByTermNumber": "Delete K8 Term Number Data",
     "LotteryK8:Term": "Term",
-    "LotteryK8:Amount": "Amount"
+    "LotteryK8:Amount": "Amount",
+    "LotteryK8:PlayType:Select1": "Select One",
+    "LotteryK8:PlayType:Select2": "Select Two",
+    "LotteryK8:PlayType:Select3": "Select Three",
+    "LotteryK8:PlayType:Select4": "Select Four",
+    "LotteryK8:PlayType:Select5": "Select Five",
+    "LotteryK8:PlayType:Select6": "Select Six",
+    "LotteryK8:PlayType:Select7": "Select Seven",
+    "LotteryK8:PlayType:Select8": "Select Eight",
+    "LotteryK8:PlayType:Select9": "Select Nine",
+    "LotteryK8:PlayType:Select10": "Select Ten"
   }
 }
