refactor(Lottery): 优化彩票分组查询及显示逻辑
- 移除 LotteryGroupDto 中冗余的 Numbers 字段
- 重构 LotteryService 分组查询逻辑，使用 GetListAsync 替代 GetQueryableAsync
- 调整前端表格显示字段，移除 id 和 lastModificationTime，拆分 numbers 为 redNumbers 和 blueNumber
- 新增本地化字段 LotteryRedNumbers 和 LotteryBlueNumbers

--- a/src/DFApp.Domain.Shared/Localization/Lottery/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/Lottery/zh-Hans.json
@@ -38,6 +38,8 @@
     "Lottery:LotteryBlue": "蓝球",
     "Lottery:LotteryRed": "红球",
     "Lottery:LotteryCode": "开奖日期",
-    "Lottery:BatchCreateTitle": "批量添加"
+    "Lottery:BatchCreateTitle": "批量添加",
+    "LotteryRedNumbers": "红球",
+    "LotteryBlueNumbers": "蓝球"
   }
 }
