fix: 修复禁止.md 文件中的格式问题，确保每条禁止操作的描述正确对齐

--- a/.kilocode/rules/禁止.md
+++ b/.kilocode/rules/禁止.md
@@ -4,8 +4,8 @@
 
 ## 指导原则
 
-- **禁止**在 `src\DFApp.HttpApi` 目录下添加 controller
-- **禁止**在 `src\DFApp.Web` 目录下添加 controller
-- **禁止**添加 Razor Page 页面(`.cshtml` 文件)
-- **禁止**执行dotnet相关的命令进行检查
-- **禁止**执行npm,yarn,pnpm相关的命令进行检查
+- 禁止在 `src\DFApp.HttpApi` 目录下添加 controller
+- 禁止在 `src\DFApp.Web` 目录下添加 controller
+- 禁止添加 Razor Page 页面(`.cshtml` 文件)
+- 禁止执行dotnet相关的命令进行检查
+- 禁止执行npm,yarn,pnpm相关的命令进行检查
