feat(database): add KeywordFilterRule table and update DbContext model
- Created a new migration to add the AppKeywordFilterRule table with relevant columns and constraints.
- Updated the DbContext model snapshot to include the new KeywordFilterRule entity configuration.
- Added Microsoft.EntityFrameworkCore.Design package reference to the web project for migration support.

--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -4,6 +4,10 @@
     "Menu:Home": "Home",
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
-    "Permission:Rss": "RSS Reader"
+    "Permission:Rss": "RSS Reader",
+    "Permission:FileFilter": "File Filter",
+    "Permission:FileFilter.Create": "Create Filter Rule",
+    "Permission:FileFilter.Edit": "Edit Filter Rule",
+    "Permission:FileFilter.Delete": "Delete Filter Rule"
   }
 }
