feat(RSS): Implement RSS source and mirror item management
- Added RssSource and RssMirrorItem entities with corresponding repositories.
- Created RssSourceAppService and RssMirrorItemAppService for CRUD operations.
- Introduced WordSegmentService for text segmentation and statistics.
- Implemented mapping classes for DTOs related to RSS sources and mirror items.
- Enhanced localization for RSS permissions.
- Updated DFAppDbContext to include new entities and their configurations.
- Added filtering and sorting capabilities in service methods for better data retrieval.

--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -5,6 +5,10 @@
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Permission:Rss": "RSS Reader",
+    "Permission:Rss.Create": "Create RSS Source",
+    "Permission:Rss.Update": "Update RSS Source",
+    "Permission:Rss.Delete": "Delete RSS Sources and Items",
+    "Permission:Rss.Download": "Download to Aria2",
     "Permission:FileFilter": "File Filter",
     "Permission:FileFilter.Create": "Create Filter Rule",
     "Permission:FileFilter.Edit": "Edit Filter Rule",
