--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -2,6 +2,8 @@
   "culture": "en",
   "texts": {
     "Menu:Home": "Home",
+    "Menu:RSS": "RSS Management",
+    "Menu:RSS:WordSegments": "Word Segments",
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Permission:Rss": "RSS Reader",
