--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -11,6 +11,8 @@
     "Common:Column:ModificationTime": "修改时间",
 
     "Menu:Home": "首页",
+    "Menu:RSS": "RSS管理",
+    "Menu:RSS:WordSegments": "分词统计",
     "Permission:Rss": "RSS阅读器",
     "Permission:Rss.Create": "创建RSS源",
     "Permission:Rss.Update": "更新RSS源",
